--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -2,15 +2,15 @@
 <ng-container *ngIf="checkStudent()">
     <h1>Welcome student.</h1>
     <br>
-<button matButton="filled" routerLink="/extra">Check Extracurriculum activities</button>
+<button matButton="filled" routerLink="/extra">Extracurriculum activities</button>
 </ng-container>
 
 <ng-container *ngIf="checkTeacher()">
     <h1>Welcome teacher.</h1>
-<button matButton="filled" routerLink="/grades">Add or Export Grades</button>
+<button matButton="filled" routerLink="/grades">Grades</button>
 <br>
-<button matButton="filled" routerLink="/extra">Add and Check Extracurriculum activities</button>
+<button matButton="filled" routerLink="/extra">Extracurriculum activities</button>
 <br>
-<button matButton="filled" routerLink="/quiz">Create and print Quiz</button>
+<button matButton="filled" routerLink="/quiz">Quiz</button>
 </ng-container>
 </div>
