--- a/src/app/extra-curr/extra-curr.html
+++ b/src/app/extra-curr/extra-curr.html
@@ -10,10 +10,133 @@
   <button style="margin-left: 5px" (click)="AddExtracurr()" mat-flat-button>Submit</button>
   </div>
 </div>
-
-<div *ngIf="!addnew">
-<button style="margin-left: 5px" (click)="addnew=true" mat-flat-button>Add new Extracurriculum</button>
+<div *ngIf="checkTeacher()">
+  <div *ngIf="!addnew">
+  <button style="margin-left: 5px" (click)="addnew=true" mat-flat-button>Add new Extracurriculum</button>
+  </div>
 </div>
+<div *ngIf="checkStudent()">
+Zapisane
+<br>
+<table mat-table
+       [dataSource]="dataSourceapp" multiTemplateDataRows
+       class="mat-elevation-z8">
+  @for (column of columnsToDisplay; track column) {
+    <ng-container matColumnDef="{{column}}">
+      <th mat-header-cell *matHeaderCellDef>Extracurriculum Activities</th>
+      <td mat-cell *matCellDef="let element">{{element[column]}}</td>
+    </ng-container>
+  }
+  <ng-container matColumnDef="expand">
+    <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
+    <td mat-cell *matCellDef="let element">
+      <button
+        matIconButton
+        aria-label="expand row"
+        (click)="toggle(element); $event.stopPropagation()"
+        class="example-toggle-button"
+        [class.example-toggle-button-expanded]="isExpanded(element)">
+        <mat-icon>keyboard_arrow_down</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
+  <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+  <ng-container matColumnDef="expandedDetail">
+    <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplayWithExpand.length">
+      <div class="example-element-detail-wrapper"
+        [class.example-element-detail-wrapper-expanded]="isExpanded(element)">
+        <div class="example-element-detail">
+         <!-- <div class="example-element-diagram">
+            <div class="example-element-position">{{element.title}</div>
+            <div class="example-element-symbol">{{element.description}}</div>
+            <div class="example-element-name">{{element.firstname}}</div>
+            <div class="example-element-weight">{{element.lastname}}</div>
+          </div>-->
+          <div class="example-element-description">
+            {{element.description}}
+            <span class="example-element-description-attribution"> Supervised by {{element.firstname}} {{element.lastname}}
+      </span>
+            <br>
+            <div *ngIf="checkStudent()">
+              <button style="margin-left: 5px;" (click)="DeleteExtracurrStud(element.extraid)" mat-flat-button>Sign Off</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
+  <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand;"
+      class="example-element-row"
+      [class.example-expanded-row]="isExpanded(element)"
+      (click)="toggle(element)">
+  </tr>
+  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+</table>
+
+Do zapisania
+<br>
+<table mat-table
+       [dataSource]="dataSourceex" multiTemplateDataRows
+       class="mat-elevation-z8">
+  @for (column of columnsToDisplay; track column) {
+    <ng-container matColumnDef="{{column}}">
+      <th mat-header-cell *matHeaderCellDef>Extracurriculum Activities</th>
+      <td mat-cell *matCellDef="let element">{{element[column]}}</td>
+    </ng-container>
+  }
+  <ng-container matColumnDef="expand">
+    <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
+    <td mat-cell *matCellDef="let element">
+      <button
+        matIconButton
+        aria-label="expand row"
+        (click)="toggle(element); $event.stopPropagation()"
+        class="example-toggle-button"
+        [class.example-toggle-button-expanded]="isExpanded(element)">
+        <mat-icon>keyboard_arrow_down</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
+  <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+  <ng-container matColumnDef="expandedDetail">
+    <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplayWithExpand.length">
+      <div class="example-element-detail-wrapper"
+        [class.example-element-detail-wrapper-expanded]="isExpanded(element)">
+        <div class="example-element-detail">
+         <!-- <div class="example-element-diagram">
+            <div class="example-element-position">{{element.title}</div>
+            <div class="example-element-symbol">{{element.description}}</div>
+            <div class="example-element-name">{{element.firstname}}</div>
+            <div class="example-element-weight">{{element.lastname}}</div>
+          </div>-->
+          <div class="example-element-description">
+            {{element.description}}
+            <span class="example-element-description-attribution"> Supervised by {{element.firstname}} {{element.lastname}}
+      </span>
+            <br>
+            <div *ngIf="checkStudent()">
+              <button style="margin-left: 5px;" (click)="AddExtracurrStud(element.extraid)" mat-flat-button>Sign Up</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
+  <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand;"
+      class="example-element-row"
+      [class.example-expanded-row]="isExpanded(element)"
+      (click)="toggle(element)">
+  </tr>
+  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+</table>
+</div>
+<div *ngIf="checkTeacher()">
 <br>
 <table mat-table
        [dataSource]="dataSource" multiTemplateDataRows
@@ -72,3 +195,4 @@
   </tr>
   <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 </table>
+</div>
